# elrond-forward-fund-test

./: .gitignore  README.md
sc/: Cargo.toml  README.md
sc/sc-funder/: Cargo.toml  deploy-testnet.interaction.json  erdpy.json  test-key
sc/sc-funder/meta/: Cargo.toml
sc/sc-funder/meta/src/: main.rs
sc/sc-funder/src/: funder.rs
sc/sc-funder/wasm/: Cargo.toml
sc/sc-funder/wasm/src/: lib.rs
sc/sc-parent/: Cargo.toml  deploy-testnet.interaction.json  erdpy.json
sc/sc-parent/meta/: Cargo.toml
sc/sc-parent/src/: parent.rs
sc/sc-parent/wasm/: Cargo.toml
sc/sc-parent/wasm/src/: lib.rs
sc/sc-test/: Cargo.toml  deploy-testnet.interaction.json  erdpy.json
sc/sc-test/meta/: Cargo.toml
sc/sc-test/meta/src/: main.rs
sc/sc-test/src/: lib.rs
sc/sc-test/wasm/: Cargo.toml
sc/sc-test/wasm/src/: lib.rs
