[package]
name = "funder"
version = "0.0.1"
authors = [ "GUILLIN Yannick <yann4460@gmail.com>",]
edition = "2018"
publish = false

[lib]
path = "src/funder.rs"

[dependencies.elrond-wasm]
version = "0.28.0"
features = ["cb_closure_managed_deser"]

[dependencies.numtoa]
version = "0.2.4"

[dev-dependencies.elrond-wasm-debug]
version = "0.28.0"